Updated details about me

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Wube and I am excited to learn more about web developement and gain new skills...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I grew up in Philadelphia and love it here...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some of my hobbies including playing sports including soccer, football, basketball and any outdoor activities...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would have been to be a pro soccer player alas...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Right here in Philly #TheEastisTheBest...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I am learning to be a web developer because it is a new skill and to explore new opportunities...</p>
     </section>
 
     <footer id="footer">
