updated details about me

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Wube</h1>
+        <h1 class='masthead-heading'>Wub</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>My name is Wube and I am excited to learn more about web developement and gain new skills...</p>
+      <p>My name is Wub and I am excited to learn more about web developement and gain new skills...</p>
       <h1>Where I'm From</h1>
       <p>I grew up in Philadelphia and love it here...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Some of my hobbies including playing sports including soccer, football, basketball and any outdoor activities...</p>
+      <p>Some of my hobbies include playing sports such as soccer, football, basketball and any outdoor activities...</p>
       <h1>What's your dream job?</h1>
       <p>My dream job would have been to be a pro soccer player alas...</p>
       <h1>Where do you live?</h1>
